# NmFrameMog

./: .env  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  run.py
Astar-Island/benchmark/: current-model-comparison-full.json  fast_eval_2.py  output.txt  previous_run_data.json  pyproject.toml  sim_view.html  sitecustomize.py
Astar-Island/benchmark/astar_twin/: __init__.py
Astar-Island/benchmark/results/: diagnostic_fast.json  diagnostic_mc_oracle.json  full_benchmark.json  hybrid_round1_benchmark.json  learned_calibrator_cv.json  mc_oracle_benchmark.json  strategy_benchmark.json
Astar-Island/benchmark/scripts/: backfill_ground_truths.py  benchmark_calibration.py  check_active_round.py  fetch_real_rounds.py  generate_sim_view.py  infer_hidden_params.py  quick_eval.py  run_best_strategy.py  run_prod.py
Astar-Island/benchmark/src/astar_twin/: __init__.py
Astar-Island/benchmark/tests/: conftest.py  test_integration.py
Astar-Island/benchmark/tests/contracts/: test_analysis.py  test_budget.py  test_rounds.py  test_simulate.py  test_submit.py
Astar-Island/benchmark/tests/engine/: test_engine.py
Astar-Island/benchmark/tests/fixture_prep/: test_ground_truth.py  test_writer.py
Astar-Island/benchmark/tests/harness/: test_budget.py  test_diagnostics.py  test_models.py  test_runner.py  test_tournament.py
Astar-Island/benchmark/tests/invariants/: test_phase_order.py  test_ports.py  test_static_terrain.py
Astar-Island/benchmark/tests/mc/: test_tensor_shape.py
Astar-Island/benchmark/tests/params/: test_prior_sampling.py
Astar-Island/benchmark/tests/replay/: test_analysis_diff.py  test_historical_rounds.py
Astar-Island/benchmark/tests/scoring/: test_kl_formula.py
Astar-Island/benchmark/tests/solver/: test_allocator.py  test_benchmark_adapter.py  test_benchmark_characterization.py  test_benchmark_suite.py  test_confidence.py  test_dump_prediction_stats.py  test_features.py  test_finalize.py  test_high_value_bidirectional.py  test_hotspots.py  test_interfaces.py  test_kl_safety.py  test_ledger.py  test_likelihood_cache.py  test_multi_fixture_suite.py  test_particles.py  test_pipeline.py  test_posterior.py  test_posterior_edge_cases.py  test_posterior_mc.py  test_prod_adapter.py  test_prod_adapter_contract.py  test_prod_adapter_integration.py  test_replay_validation.py  test_run_prod.py  (+2 more)
NG/: AGENTS.md  pyproject.toml
NG/$tmpdir/: run.py  train_summary.json
NG/.sisyphus/: boulder.json
NG/.sisyphus/plans/: gcloud-training-first-iteration.md
NG/artifacts/: run_manifest.json
NG/artifacts/cloud/: layout.txt
NG/artifacts/eval/: classifier_gt_metrics.json  classifier_gt_metrics.predictions.json  detector_holdout_metrics.json  detector_holdout_metrics.predictions.json  final_variant_decision.json  retrieval_gate_report.json
NG/artifacts/release/: final_manifest.json
NG/artifacts/retrieval/: gallery_index.npz  gallery_manifest.json
NG/artifacts/smoke/: detector_budget.json  detector_only_budget.json  final_budget.json  predictions.json
NG/configs/classifier/: search.json
NG/configs/cloud/: main.json
NG/configs/data/: main.json  splits.json
NG/configs/detector/: yolov8m-search.json
NG/configs/final/: frozen_pipeline.json
NG/configs/retrieval/: gallery.json
NG/configs/submission/: detector_only.json  final.json  smoke.json
NG/data/processed/: categories.json  product_index.json  reference_metadata.json
NG/docs/: README.md  scoring.md  submission-checklist.md
NG/final_submission_yv8x_3fold_050ep_001/: README.md  build_submission.py  local_sanity_check.py  recognizer_model.py  run.py
NG/scripts/: README.md
NG/scripts/gcp/: README.md  bootstrap_vm.sh  preflight.sh  sync_artifacts.sh
NG/submission/: run.py
NG/task_norgesgruppen_data/: cli.py  predictor.py
NG/task_norgesgruppen_data/detr/: test1.py  train_deformable_detr_retail.py
NG/tests/: conftest.py
NG/tests/integration/: test_budget_check_rejects_oversize_or_timeout.py  test_classifier_crop_data.py  test_classifier_crop_pipeline.py  test_detector_evaluate_smoke.py  test_detector_export_version_guard.py  test_detector_submission_smoke.py  test_detector_train_smoke.py  test_final_submission_bundle.py  test_final_train_config_locked.py  test_final_train_rejects_config_drift.py  test_gcp_layout_config.py  test_gcp_layout_invalid_project.py  test_gcp_preflight.py  test_gcp_sync_artifacts.py  test_ingest_official_archives.py  test_ingest_rejects_corrupt_archives.py  test_run_manifest.py  test_submission_contract.py  test_submission_rejects_blocked_imports.py
NG/tests/unit/: test_audit_release_artifacts.py  test_gallery_index.py  test_gallery_marks_missing_reference_classes.py  test_hybrid_scorer.py  test_hybrid_scorer_rejects_invalid_predictions.py  test_prepare_detector_dataset.py  test_project_structure.py  test_project_structure_missing_required_dir.py  test_pyproject_contract.py  test_retrieval_gate.py  test_sandbox_version_guards.py  test_split_determinism.py  test_split_rejects_image_leakage.py  test_task4_operator_path_docs.py
NG/yolov8x_product_pipeline/: README.md  __init__.py  category_name_overrides.json  common.py  generate_oof_crops.py  prepare_data.py  requirements-gcp.txt  run_pipeline.py  train_detector.py  train_recognizer.py
apps/ai-accounting-agent/: pyproject.toml
apps/ai-accounting-agent/tests/: conftest.py  test_evaluator.py  test_local_endpoint.py  test_request_parsing.py  test_response_format.py  test_task_library.py  test_tripletex_client.py  test_verification.py
apps/astar-island/: pyproject.toml
apps/astar-island/docs/: backtesting-workflow.md
apps/astar-island/tests/: conftest.py  test_api.py  test_backtesting.py  test_benchmark.py  test_calibration.py  test_engine.py  test_ensemble.py  test_integration.py  test_mapgen.py  test_phases.py  test_pipeline.py  test_prediction.py  test_prediction_format.py  test_probability_floor.py  test_scoring.py  test_simulator_models.py  test_solver.py  test_submission.py  test_terrain.py  test_terrain_mapping.py  test_unit.py
apps/gce-runner/: pyproject.toml
(+765 files in other folders)
