[project]
name = "nmframemog-monorepo"
version = "0.1.0"
description = "Monorepo for object detection, AI accounting agent, and A* island."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pillow>=11.2.1,<12.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "basedmypy==2.10.0",
    "pytest==8.4.2",
    "ruff==0.15.6",
]
ng-train = [
    "matplotlib>=3.8,<4.0",
    "numpy>=1.26,<2.0",
    "pillow>=11.2.1,<12.0.0",
    "pyyaml>=6.0,<7.0",
    "scikit-learn>=1.4,<2.0",
    "timm==0.9.12",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "ultralytics==8.1.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/object-detection",
    "apps/ai-accounting-agent",
    "apps/astar-island",
    "apps/gce-runner",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "apps", "tests", "run.py"]
explicit_package_bases = true
mypy_path = [
    "apps/object-detection/src",
    "apps/ai-accounting-agent/src",
    "apps/astar-island/src",
    "apps/gce-runner/src",
]
exclude = ["tests/"]

[tool.pyright]
include = ["src", "tests", "run.py"]
extraPaths = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.basedpyright]
include = ["src", "tests", "run.py"]
extraPaths = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
