[project]
name = "nmframemog-monorepo"
version = "0.1.0"
description = "Monorepo for A* island challenge."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "basedmypy==2.10.0",
    "pytest==8.4.2",
    "ruff==0.15.6",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/astar-island",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["apps"]
explicit_package_bases = true
mypy_path = [
    "apps/astar-island/src",
]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["apps/astar-island/tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lightgbm.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astar_island.*"
allow_any_expr = true

[[tool.mypy.overrides]]
module = "joblib.*"
ignore_missing_imports = true
