[project]
name = "ng"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "ultralytics==8.1.0",
]

[dependency-groups]
dev = [
  "mypy==1.18.2",
  "pytest==8.4.2",
  "ruff==0.15.6",
]

[tool.ruff]
target-version = "py311"
exclude = [
  ".pytest_cache",
  ".venv",
  "build",
  "dist",
  "tests/unit/fixtures",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
exclude = "(^tests/unit/fixtures/|^\\.venv/|^build/|^dist/)"
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests/unit"]
norecursedirs = [
  ".pytest_cache",
  ".venv",
  "build",
  "dist",
  "tests/unit/fixtures",
]
