[project]
name = "ai-accounting-agent"
version = "0.1.0"
description = "AI accounting agent task"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_accounting_agent"]
