[project]
name = "astar-island"
version = "0.1.0"
description = "A* island prediction challenge solver"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astar_island"]
