[project]
name = "astar-island"
version = "0.1.0"
description = "A* island prediction challenge solver"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "scikit-learn>=1.6",
    "joblib>=1.4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/astar_island"]
