[project]
name = "gce-runner"
version = "0.1.0"
description = "MCP server for spawning ephemeral GCE VMs to run repo apps"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-compute>=1.22.0",
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gce_runner"]
